# KouluProjektit

./: README.md
Notifikaattori/: CMakeLists.txt  Notifikaattori.cpp  Notifikaattori.h  Seuraaja.cpp  main.cpp
Pankkitili/: Asiakas.cpp  Asiakas.h  CMakeLists.txt  Pankkitili.cpp  Pankkitili.h  main.cpp
Plain_Cplus/: CMakeLists.txt  main.cpp
Viikko3Teht/: CMakeLists.txt  Chef.cpp  Chef.h  ItalianChef.cpp  ItalianChef.h  main.cpp
Viiko2/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
